# GunBox

./: .gitignore  README.md
GunBox/: .clang-format  .clang-tidy  .editorconfig  CMakeLists.txt  CMakeSettings.json  cpp.hint
GunBox/Resources/Windows/: GunBox.rc
GunBox/Sources/: main.cpp
GunBox/Sources/Engine/: CMakeLists.txt  Engine_Base.cmake  Engine_SourceFiles.cmake
GunBox/Sources/Engine/Include/Engine/: Base
GunBox/Sources/Engine/Sources/: main.cpp  main.hpp
GunBox/Sources/Engine/Sources/Application/: ApplicationInfo.cpp  ApplicationInfo.hpp  ApplicationInfo.inl  ApplicationState.cpp  ApplicationState.hpp  CommandLineArgs.cpp  CommandLineArgs.hpp  CoreApplication.cpp  CoreApplication.hpp  CoreApplication.inl  CoreApplicationFactory.cpp  CoreApplicationFactory.hpp  ModuleInfo.cpp  ModuleInfo.hpp  Preferences.cpp  Preferences.hpp  Preferences.inl  ProductInfo.cpp  ProductInfo.hpp  ProductInfo.inl
GunBox/Sources/Engine/Sources/Application/Configuration/: Values.hpp
GunBox/Sources/Engine/Sources/Common/: SimpleDelegate.hpp  SimpleDelegate.inl  Version.cpp  Version.hpp  Version.inl  implementeBy.inl  implementedBy.hpp  implementedBy.inl
GunBox/Sources/Engine/Sources/Common/Macros/: Base.cpp  Base.hpp  Logging.hpp  SDL2_ErrorChecking.hpp
GunBox/Sources/Engine/Sources/Logger/: LogAPI.cpp  LogAPI.hpp  Logger.cpp  Logger.hpp
GunBox/Sources/Engine/Sources/Logger/Internal/: Logger.cpp  Logger.hpp  Logger.inl  LoggerBase.cpp  LoggerBase.hpp  LoggerTypes.cpp  LoggerTypes.hpp
GunBox/Sources/Engine/Sources/Renderer/: Renderer.cpp  Renderer.hpp  RendererBase.cpp  RendererBase.hpp
GunBox/Sources/Engine/Sources/Renderer/Graphics/: GraphicsRendererFactory.cpp  GraphicsRendererFactory.hpp  GraphicsRenderer_Interface.cpp  GraphicsRenderer_Interface.hpp  GraphicsRenderer_InterfaceAccessor.cpp  GraphicsRenderer_InterfaceAccessor.hpp
GunBox/Sources/Engine/Sources/Renderer/Graphics/Constants/: GpuPreferences.hpp
GunBox/Sources/Engine/Sources/Renderer/Graphics/OpenGL/: GraphicsRenderer_OpenGL.cpp  GraphicsRenderer_OpenGL.hpp  OpenGL.cpp  OpenGL.hpp  OpenGL_ErrorChecking.cpp  OpenGL_ErrorChecking.hpp  OpenGL_ErrorChecking.inl  OpenGL_ErrorChecking_FuncImpl.inl  OpenGL_Loader.cpp  OpenGL_Loader.hpp
GunBox/Sources/Engine/Sources/Renderer/Graphics/Vulkan/: GraphicsRenderer_Vulkan.cpp  GraphicsRenderer_Vulkan.hpp  Vulkan.cpp  Vulkan.hpp
GunBox/Sources/Engine/Sources/Renderer/OpenGL/: OpenGL.hpp  OpenGL_ErrorChecking.hpp  OpenGL_Loader.hpp
GunBox/Sources/Engine/Sources/System/: EventProcessor.cpp  EventProcessor.hpp  EventProcessor.inl  Geometry.cpp  Geometry.hpp  HostPlatform.cpp  HostPlatform.hpp  HostPlatform.inl  InputCallbacks.hpp  InputProcessor.cpp  InputProcessor.hpp  InputProcessor.inl  InputProcessorAccessor.hpp  Main.cpp  Main.hpp  Monitor.cpp  Monitor.hpp  Preferences.cpp  Preferences.hpp  Window.cpp  Window.hpp  Window.inl
GunBox/Sources/Engine/Sources/System/DeviceTypes/Graphics/: GeometryTypes.cpp  GeometryTypes.hpp  RendererTypes.cpp  RendererTypes.hpp
GunBox/Sources/Engine/Sources/System/DeviceTypes/IO/: GamepadTypes.hpp  KeyboardTypes.hpp
GunBox/Sources/Engine/Sources/System/EventHandlers/: EventHandler.cpp  EventHandler.hpp
GunBox/Sources/Engine/Sources/System/EventProcessing/: EventProcessor.cpp  EventProcessor.hpp  EventProcessor.inl  InputCallbacks.cpp  InputCallbacks.hpp  InputEventCallbacks.cpp  InputEventCallbacks.hpp  InputEventCallbacks_Interface.cpp  InputEventCallbacks_Interface.hpp  InputEventProcessor.cpp  InputEventProcessor.hpp  InputEventProcessor.inl  InputEventProcessorAccessor.cpp  InputEventProcessorAccessor.hpp  InputEventProcessorAccessor.inl  InputProcessor.hpp  InputProcessorAccessor.cpp  InputProcessorAccessor.hpp  InputProcessorAccessor.inl  SystemEventCallbacks.cpp  SystemEventCallbacks.hpp  SystemEventCallbacks_Interface.cpp  SystemEventCallbacks_Interface.hpp  SystemEventProcessor.cpp  SystemEventProcessor.hpp  SystemEventProcessorAccessor.cpp  SystemEventProcessorAccessor.hpp  SystemEventProcessorAccessor.inl
GunBox/Sources/Engine/Sources/System/GUI/: AlertBox.cpp  AlertBox.hpp  MessageBox.cpp  MessageBox.hpp  Monitor.cpp  Monitor.hpp  Window.cpp  Window.hpp  Window.inl
GunBox/Sources/Engine/Sources/System/HostPlatform/: FileSystem.cpp  FileSystem.hpp  GPUDevice_OpenGL.cpp  GPUDevice_OpenGL.hpp  GPUDevice_OpenGL.inl  GPUDevice_Vulkan.cpp  GPUDevice_Vulkan.hpp  OpenGLDevice.cpp  OpenGLDevice.hpp  OpenGLDevice.inl  ProcessSingleton.cpp  ProcessSingleton.hpp  SubSystems.cpp  SubSystems.hpp  SubSystems.inl  SystemConsole.cpp  SystemConsole.hpp  SystemConsole.inl  SystemInfo.cpp  SystemInfo.hpp  VulkanDevice.cpp  VulkanDevice.hpp
GunBox/Sources/Game/: CMakeLists.txt  Game_SourceFiles.cmake
GunBox/Sources/Game/Resources/Windows/: DpiAwareness.manifest  resource.h
GunBox/Sources/Game/Sources/: Game.cpp  Game.hpp  GameFactory.cpp
GunBox/Sources/Game/Sources/Configuration/: Values.hpp
GunBox/Sources/Game/Sources/EventHandling/: InputEventCallbacks.cpp  InputEventCallbacks.hpp  InputEventCallbacks.inl  SystemEventCallbacks.cpp  SystemEventCallbacks.hpp  SystemEventCallbacks.inl
GunBox/Sources/Game/Sources/EventHandling/Commands/: CommandNull.cpp  CommandNull.hpp  CommandTypes.cpp  CommandTypes.hpp  Command_Interface.cpp  Command_Interface.hpp  Command_Null.cpp  Command_Null.hpp  Command_UpdateApplicationState.cpp  Command_UpdateApplicationState.hpp  Commander_Interface.cpp  Commander_Interface.hpp  Commander_MainMenu.cpp  Commander_MainMenu.hpp  Commander_Null.cpp  Commander_Null.hpp  MainMenu_Commander.cpp  MainMenu_Commander.hpp
GunBox/Sources/Game/Sources/GameStates/: GameState.cpp  GameState.hpp  GameStateManager.cpp  GameStateManager.hpp  GameStateTypes.cpp  GameStateTypes.hpp  InGame.cpp  InGame.hpp  MainMenu.cpp  MainMenu.hpp
GunBox/Sources/Game/Sources/Logging/: Logging.cpp  Logging.hpp
GunBox/Sources/System/: Geometry.hpp  Monitor.cpp  Monitor.hpp  Preferences.cpp  Preferences.hpp  RendererBase.hpp  Window.cpp  Window.hpp
GunBox/__cmake/Modules/: FindFreeType2.cmake  FindSDL2.cmake
(+76 files in other folders)
